# ActuosusAI

./: .env  .gitignore  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  README.md  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose.yaml  mypy.ini  nginx.conf  pyproject.toml  run.sh  run_checks.sh  start_dev.sh
.github/workflows/: main.yml
actuosus_ai/ai_interaction/: text_generation_service.py
actuosus_ai/ai_model_manager/: ai_model_download_service.py  ai_model_storage_service.py  connection.py  dto.py  language_model_service.py  orm.py
actuosus_ai/app/: ai_interaction_router.py  ai_router.py  dependency.py  main.py
actuosus_ai/common/: settings.py  utils.py
backend/: pyproject.toml  run_checks.sh
backend/actuosus_ai/ai_interaction/: ai_chat_service.py  chat_websocket_orchestrator.py  text_generation_service.py
client/: .eslintrc.json  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
client/app/: layout.tsx  page.tsx
frontend/: .env.production  Dockerfile  jest.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: globals.css
integration_tests/: conftest.py  integration_test_settings.py  test_integration.py  test_integration_ai_model_manager.py  test_integration_download_hf_lang_model.py
tests/ai_interaction/: test_text_generation_service.py
tests/ai_model_manager/: test_ai_model_download_service.py  test_ai_model_storage_service.py  test_dto.py  test_language_model_service.py  test_orm.py
tests/app/: test_ai_router.py  test_exception_handler.py
(+66 files in other folders)
